# HaskellExercises

./: .gitignore  Calcs.hs  CalcsFFI.c  CalcsFFI.h  CalcsFFI.hs  CalcsFFI_stub.h  Calcs_memoized.hs  Fact.hi  Fact.hs  HaskellExercises.cabal  LICENSE  README.md  backupFact.hs~  cabal.project.local  calculos.md  first.hi  first.hs  haskell.sh  main.cpp  package.yaml
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes
dist-newstyle/packagedb/ghc-9.4.8/: HaskellExercises-0.1.0.0-inplace.conf  package.cache
test/: CalcsTest.cabal  Spec.hs  TastySpec.hs
