-- filepath: c:\Users\julia\HaskellExercises\HaskellExercises.cabal
name:                HaskellExercises
version:             0.1.0.0
synopsis:            A simple Haskell project
-- description:
homepage:            https://github.com/githubuser/HaskellExercises#readme
license:             MIT
license-file:        LICENSE
author:              Julia
maintainer:          yourname@example.com
copyright:           2023 Julian Calderón Almendros
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable first
  main-is:           first.hs
  -- other-modules:
  other-extensions:
  build-depends:       base >=4.7 && <5
  ghc-options:         -Wall
  default-language:    Haskell2010

library
  exposed-modules:     Calcs
  -- other-modules:
  build-depends:    base >=4.7 && <5
  hs-source-dirs:   .
  default-language: Haskell2010
