-- filepath: c:\Users\julia\HaskellExercises\HaskellExercises.cabal
name:                HaskellExercises
version:             0.1.0.0
synopsis:            A simple Haskell project
-- description:
homepage:            https://github.com/githubuser/HaskellExercises#readme
license:             MIT
license-file:        LICENSE
author:              Julia
maintainer:          yourname@example.com
copyright:           2023 Julian Calderón Almendros
category:            Web
build-type:          Simple
cabal-version:       >=1.10

test-suite HaskellExercises-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base >=4.7 && <5,
                       QuickCheck >=2.14,
                       Calcs
  hs-source-dirs:      ./test/.
  ghc-options:         -Wall
  default-language:    Haskell2010

executable first
  main-is:           first.hs
  -- other-modules:
  other-extensions:
  build-depends:       base >=4.7 && <5
  hs-source-dirs:      .
  ghc-options:         -Wall
  default-language:    Haskell2010

library
  exposed-modules:     Calcs
  -- other-modules:
  build-depends:    base >=4.7 && <5
  hs-source-dirs:   .
  default-language: Haskell2010
