test-suite tests
    type:             exitcode-stdio-1.0
    main-is:          TastySpec.hs -- O el nombre que le hayas dado
    hs-source-dirs:   test
    build-depends:    base ^>=4.14.3.0,
                      HaskellExercises, -- El nombre de tu biblioteca/ejecutable
                      tasty,
                      tasty-hunit,
                      tasty-quickcheck,
                      QuickCheck, -- Si usas tipos como NonNegative directamente
                      data-rationals -- O el paquete que provea Data.Ratio
    default-language: Haskell2010